--- a/bonch/templates/start_journal.html
+++ b/bonch/templates/start_journal.html
@@ -47,7 +47,7 @@
 
 
     .table {
-
+    width: 50%;
     font-size:14px;
     left:0px;
     table-layout: fixed;
@@ -63,17 +63,17 @@
     }
 
     .table__cell {
-       height: 70px;
-    width: 270px;
+    height: 70px;
+    width: 135px;
     }
 
 
     .table__cell_fixed {
-
-
+    margin-top:-1px;
+    margin-left:-1px;
 
     width: 271px;
-     height: 70px;
+    height: 71px;
     background-color:white;
     position: absolute;
     left: auto;
@@ -108,7 +108,7 @@
      border: solid 2px #ccc;
      border-radius: 5px;
      text-align:center;
-     width: 40px;
+     width: 70px;
 }
     .boxed input[type="radio"] {
      display: none;
