--- a/bonch/templates/start_journal.html
+++ b/bonch/templates/start_journal.html
@@ -38,7 +38,7 @@
     }
 
     #menu_p1 li #active {
-        background-color: #F6941E;
+        background-color: #FEEFDD;
         color:black;
         padding-top: 5px;
         padding-bottom:5px;
