--- a/bonch/templates/start_journal.html
+++ b/bonch/templates/start_journal.html
@@ -121,7 +121,6 @@
 }
 }
 
-
     </style>
 </head>
 <body>
@@ -191,6 +190,7 @@
 </nav>
 
 <!--  <div class="container-fluid"> -->
+<div style="height:100%">
 {% block content %}
 
 {% if show_table %}
@@ -302,7 +302,7 @@
 
 {% endblock %}
 
-
+</div>
 <!--
 <footer class="footer">
     <div class="container">
