--- a/bonch/templates/check_students_work.html
+++ b/bonch/templates/check_students_work.html
@@ -2,38 +2,38 @@
 
 {% block content %}
 <div style="height:100%">
-<div class="journal_menu">
-    <ul id="menu_p1" style="display:flex;  list-style: none; text-decoration: none;  padding-left: 15px; ">
-        <li><a href="#">Посещаемость</a></li>
-        <li><a id="active" href="#">Работы </a></li>
-        <li><a href="#">Статистика</a></li>
-        <li><a href="#">Аттестация+</a></li>
-        <li><a href="#">Содержание дисциплины</a></li>
-        <li><a href="#">Ведомости</a></li>
-    </ul>
-    <!--<ul id="menu_p2" style="display:flex;  list-style: none; text-decoration: none;  padding-left: 15px; ">
-        <li><a href="#">Состояние аудиторий</a></li>
-        <li><a href="#">Замена ППС (на сегодня)</a></li>
-        <li><a href="#">Инструкции</a></li>
-            <li>
-        <div class="btn-group new">
-      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Дополнительно
-      </button>
+<!--<div class="journal_menu">-->
+<!--    <ul id="menu_p1" style="display:flex;  list-style: none; text-decoration: none;  padding-left: 15px; ">-->
+<!--        <li><a href="#">Посещаемость</a></li>-->
+<!--        <li><a id="active" href="#">Работы </a></li>-->
+<!--        <li><a href="#">Статистика</a></li>-->
+<!--        <li><a href="#">Аттестация+</a></li>-->
+<!--        <li><a href="#">Содержание дисциплины</a></li>-->
+<!--        <li><a href="#">Ведомости</a></li>-->
+<!--    </ul>-->
+<!--    &lt;!&ndash;<ul id="menu_p2" style="display:flex;  list-style: none; text-decoration: none;  padding-left: 15px; ">-->
+<!--        <li><a href="#">Состояние аудиторий</a></li>-->
+<!--        <li><a href="#">Замена ППС (на сегодня)</a></li>-->
+<!--        <li><a href="#">Инструкции</a></li>-->
+<!--            <li>-->
+<!--        <div class="btn-group new">-->
+<!--      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+<!--        Дополнительно-->
+<!--      </button>-->
 
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Дополнительно</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <a class="dropdown-item" href="#">Something else here</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Separated link</a>
-      </div>
-    </div>
-           </li>
-    </ul> -->
-</div>
+<!--      <div class="dropdown-menu">-->
+<!--        <a class="dropdown-item" href="#">Дополнительно</a>-->
+<!--        <a class="dropdown-item" href="#">Another action</a>-->
+<!--        <a class="dropdown-item" href="#">Something else here</a>-->
+<!--        <div class="dropdown-divider"></div>-->
+<!--        <a class="dropdown-item" href="#">Separated link</a>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--           </li>-->
+<!--    </ul> &ndash;&gt;-->
+<!--</div>-->
 
-<div style="padding-left:10px; padding-right:10px; padding-top: 0px; height: 90%; width: 100%; display:flex; flex-direction: row; align-items: stretch">
+<div style="padding-left:10px; padding-right:10px; padding-top: 25px; height: 90%; width: 100%; display:flex; flex-direction: row;">
   <div  style="margin-left:10px; width: 55%; height: 800px">
       <object
 	data="/static/students works/{{file_name}}"
@@ -45,9 +45,9 @@
 		<a href="/static/students works/IST032m pr1.pdf">Скачать PDF</a>
 	  </p>
     </object>
-
-
   </div>
+
+
   <div  style="width:40%;">
   <div style="width:100%; height:100%; background-color: white; padding-left: 50px; padding-right:30px; padding-top:0px">
       <h3 style="margin-bottom: 15px">{{name_of_work}}</h3>
@@ -75,18 +75,81 @@
           {% elif status == 'st6' %}
           <p style="color: orange">&#10007; переделать (новый ответ)</p>
           {% endif %}
+            </div>
+            <br>
+         <p style="width: 100%">
+
+ {% if comment != '' %}
+  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="background-color:white; color: #007BFF">
+    Комментарий к прошлой версии работы
+  </button>
+</p>
+<div class="collapse show" id="collapseOne">
+  <div class="card card-body">
+      <p style="color: grey; margin-bottom:10px; padding-bottom:0px;"> {{time_of_comment}} </p>
+      <p> {{comment}} </p>
+</div>
           </div>
-  </div>
+  {% endif %}
+
+      <br>
+ <form id="set_work_completion_status" action="{{ url_for('check_students_work', works_id=works_id) }}" method="POST">
+
+     <div class="form-group">
+    <label for="comment_on_work">Комментарий к работе</label>
+    <textarea class="form-control" id="comment_on_work" rows="3"></textarea>
+    </div>
+
+      <div class="boxed">
+
+                       {% if status == 'st2' %}
+                       <input type="radio" id="set_done_completion_status" name="set_work_completion_status" value="st2" form="set_work_completion_status" checked="checked">
+                       <label style="margin-right:10px; padding: 10px 20px 10px 20px; width: 120px " for="set_done_completion_status">Принято</label>
+                       {% else %}
+                       <input type="radio" id="set_done_completion_status" name="set_work_completion_status" value="st2" form="set_work_completion_status">
+                       <label style="margin-right:10px; padding: 10px 20px 10px 20px; width: 120px " for="set_done_completion_status">Принято</label>
+                       {% endif %}
+
+                       {% if status == 'st3' %}
+                       <input type="radio" id="set_fix_completion_status" name="set_work_completion_status" value="st3" form="set_work_completion_status" checked="checked">
+                       <label style="margin-right:10px; padding: 10px 20px 10px 20px; width: 120px " for="set_fix_completion_status">Исправить</label>
+                       {% else %}
+                       <input type="radio" id="set_fix_completion_status" name="set_work_completion_status" value="st3" form="set_work_completion_status">
+                       <label style="margin-right:10px; padding: 10px 20px 10px 20px; width: 120px " for="set_fix_completion_status">Исправить</label>
+                       {% endif %}
+
+                       {% if status == 'st4' %}
+                        <input type="radio" id="set_redo_completion_status" name="set_work_completion_status" value="st4" form="set_work_completion_status" checked="checked">
+                       <label style="margin-right:10px; padding: 10px 20px 10px 20px; width: 120px " for="set_redo_completion_status">Переделать</label>
+                       {% else %}
+                       <input type="radio" id="set_redo_completion_status" name="set_work_completion_status" value="st4" form="set_work_completion_status">
+                       <label style="margin-right:10px; padding: 10px 20px 10px 20px; width: 120px " for="set_redo_completion_status">Переделать</label>
+                       {% endif %}
+
+                    </div>
+
+<br>
+  <button form="set_work_completion_status" class="btn btn-outline-success my-2 my-sm-0" type="submit">Готово</button>
+</form>
 
   </div>
+
+
+
+
+
+</div>
+
   <div  style="width:5%;">
 
    <a href="{{ url_for('students_works') }}">
-       <img style="width:24px; height:24px; margin: 0px" src="/static/img/close_icon.svg" alt="edit icon">
+       <img id="close_button" style="width:24px; height:24px; margin: 0px" src="/static/img/close_icon.svg" alt="edit icon">
+   </a> <br>
+    {% if next_work_id != '' %}
+      <a href="{{ url_for('check_students_work', works_id=next_work_id)}}">
+       <img id="next_button" style="width:48x; height:48px; background-color:#F4F4F4; border-radius: 15px; margin-top: 250px " src="/static/img/next_icon.svg" alt="edit icon">
    </a>
-      <a href="#">
-       <img id="next_button" style="width:48x; height:48px; background-color:#F4F4F4; border-radius: 15px; margin-top: 250px" src="/static/img/next_icon.svg" alt="edit icon">
-   </a>
+      {% endif %}
 
   </div>
 </div>
