--- a/bonch/templates/start_journal.html
+++ b/bonch/templates/start_journal.html
@@ -125,17 +125,33 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg fixed-top bg-light">
+
+
+   <div class="dropdown" style="margin-right: 10px">
+  <button class="btn btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown"  aria-expanded="false" style="background-color: #F5F7F9; padding: 2px; border-radius:8px">
+    <img style="width: 32px; height: 32px" src="/static/img/menu_icon.svg" alt="menu icon">
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <p style="margin-left:25px;padding-right:10px; margin-bottom: 0px; font-size: 14px; color:grey">ТЕКСТ РАЗДЕЛИТЕЛЯ</p>
+    <a class="dropdown-item" href="#" >Действие</a>
+    <a class="dropdown-item" href="#" >Другое действие</a>
+    <a class="dropdown-item" href="#" >Что-то еще здесь</a>
+  </div>
+</div>
+
+    <img src="/static/img/logo_icon.svg" alt="small sut logo icon" style="width: 38px; height: 38px; border-radius:8px; margin-right: 10px">
+
     <a style="color:black; font-weight:bold" class="navbar-brand" href="#">Журнал</a>
-    <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarCollapse"
-            aria-controls="navbarCollapse"
-            aria-expanded="false"
-            aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<!--    <button-->
+<!--            class="navbar-toggler"-->
+<!--            type="button"-->
+<!--            data-toggle="collapse"-->
+<!--            data-target="#navbarCollapse"-->
+<!--            aria-controls="navbarCollapse"-->
+<!--            aria-expanded="false"-->
+<!--            aria-label="Toggle navigation">-->
+<!--        <span class="navbar-toggler-icon"></span>-->
+<!--    </button>-->
 
     <div class="collapse navbar-collapse" id="navbarCollapse">
 
