--- a/bonch/templates/insert_to_journal.html
+++ b/bonch/templates/insert_to_journal.html
@@ -33,7 +33,7 @@
            </li>
     </ul> -->
 </div>
-<form id="insert_visits" action="{{ url_for('insert_to_journal', index=index) }}" method="POST"></form>
+<form id="insert_visits" action="{{ url_for('insert_to_journal', day_index=index) }}" method="POST"></form>
 <div class="table_area">
         <table align=left class="table table-bordered" style="width: 300px">
             <tr class="table__header">
